--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i class="fa-solid fa-plus"></i>
           </button>
           <div class="error-msg hidden">
-            <i class="fa-solid fa-circle-exclamation"></i> Add A To-do First
+            <i class="fa-solid fa-circle-exclamation"></i> Add A To-Do First
           </div>
         </div>
         <button class="info-btn">
